--- a/React Native/Mixpanel/MixpanelIntegration/package.json
+++ b/React Native/Mixpanel/MixpanelIntegration/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "mixpanel-react-native": "./mixpanel-react-native-1.0.0-beta.2.tgz",
     "react": "16.13.1",
-    "react-native": "0.63.1"
+    "react-native": "0.63.1",
+    "react-native-mixpanel": "^1.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
